--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 
-<nav class="navbar navbar-expand-lg navbar-light fixed-top">
+<nav class="navbar navbar-expand-sm navbar-light fixed-top">
     <div class="container">
         <a class="navbar-brand" href="#" style="font-weight: bolder;">Siddhanta Poudel</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -52,7 +52,7 @@
     </div>
 </div>
 <div class="crop">
-    <img src="pictures/developer1.png" alt="developer">
+    <img src="pictures/developer2.png" alt="developer">
 </div>
 
 
@@ -78,7 +78,7 @@
         <div class="col span_1_of_3" style="text-align: center;">
             <span class="fas fa-graduation-cap" style="font-size: 50px; color: purple; padding: 5px;"></span><br>
             <span style="font-weight: bold">Education</span>
-            <p style="text-align: left" class="about_des">
+            <p class="about_des">
                 -Software Engineering(2017-Now)
                 <br>
                 -HSEB(2015-2017)
@@ -89,10 +89,10 @@
         <div class="col span_1_of_3" style="text-align: center;">
             <span class="fas fa-bullseye" style="font-size: 50px; color: purple; padding: 5px;"></span><br>
             <span style="font-weight: bold;">Skills</span>
-            <p style="text-align: left" class="about_des">
-                -Web(HTML5,CSS,JS,PHP)
+            <p class="about_des">
+                <span>-HTML,CSS,JS,PHP</span>
                 <br>
-                -C# , .NET,Python(Beginner level)
+                -C#,NET,Python
                 <br>
                 -Good Knowledge of algorithms.
             </p>
@@ -101,7 +101,7 @@
         <div class="col span_1_of_3" style="text-align: center">
             <span class="fas fa-puzzle-piece" style="font-size: 50px; color: purple; padding: 5px"></span><br>
             <span style="font-weight: bold">Hobbies</span>
-            <p style="text-align: left" class="about_des">
+            <p class="about_des">
                 -Learning new Stuff.
                 <br>
                 -GYM, Physical Fitness.
