--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             <span class="fas fa-puzzle-piece" style="font-size: 50px; color: purple; padding: 5px"></span><br>
             <span style="font-weight: bold">Hobbies</span>
             <p class="about_des">
-                -Learning new Stuff.
+                -Learning about new technologies.
                 <br>
                 -GYM, Physical Fitness.
                 <br>
@@ -111,8 +111,8 @@
         </div>
     </div>
     <hr>
-
     <h2>Projects</h2>
+
 
 </div>
 
