added projects section

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             <span class="fas fa-bullseye" style="font-size: 50px; color: purple; padding: 5px;"></span><br>
             <span style="font-weight: bold;">Skills</span>
             <p class="about_des">
-                <span>-HTML,CSS,JS,PHP</span>
+                -HTML,CSS,JS,PHP
                 <br>
                 -C#,NET,Python
                 <br>
@@ -102,7 +102,7 @@
             <span class="fas fa-puzzle-piece" style="font-size: 50px; color: purple; padding: 5px"></span><br>
             <span style="font-weight: bold">Hobbies</span>
             <p class="about_des">
-                -Learning about new technologies.
+                -Learning about new tech.
                 <br>
                 -GYM, Physical Fitness.
                 <br>
@@ -112,6 +112,98 @@
     </div>
     <hr>
     <h2>Projects</h2>
+
+    <div class="section group">
+        <div class="col span_1_of_2">
+            <div style="text-align: center">
+                <img src="pictures/website_img.PNG" height="80%" width="80%" style="text-align: center; padding-top: 15px; padding-bottom: 10px" alt="website image"/>
+                <br>
+                <span><a href="https://muktinathjewels.000webhostapp.com" >Jewellery Website</a></span>
+                <p class="about_des">
+                    -Responsive Mobile Friendly.
+                    <br>
+                    -Admin panel with login.
+                    <br>
+                    -Upload and delete images of gallery
+                    <br>
+                    -Thumbnail system for faster loading
+                    <br>
+                    <a href="https://muktinathjewels.000webhostapp.com">Visit Here!</a>
+                    Also
+                    <a href="https://github.com/siddhantapoudel/Jewellery_website_Project">Github Link</a>
+                </p>
+
+            </div>
+
+        </div>
+        <div class="col span_1_of_2">
+            <div style="text-align: center">
+                <img src="pictures/todo_img.PNG" height="40%" width="40%" style="text-align: center; padding-top: 15px; padding-bottom: 10px" alt="website image"/>
+                <br>
+                <span><a href="https://github.com/siddhantapoudel/ToDoList-using-JSON" >Todo List C#</a></span>
+                <p class="about_des">
+                    -Add and Delete Todo.
+                    <br>
+                    -Set the todo as done.
+                    <br>
+                    -save the list in an JSON file.
+                    <br>
+                    <a href="https://github.com/siddhantapoudel/ToDoList-using-JSON">Github Link</a>
+                </p>
+
+            </div>
+        </div>
+    </div>
+
+    <div class="section group">
+        <div class="col span_1_of_2">
+            <div style="text-align: center">
+                <img src="pictures/Calc_img.PNG" height="30%" width="30%" style="text-align: center; padding-top: 15px; padding-bottom: 10px" alt="website image"/>
+                <br>
+                <span><a href="https://github.com/siddhantapoudel/Calculator-C-Sharp" >Calculator C#</a></span>
+                <p class="about_des">
+                    -Basic Calculations.
+                    <br>
+                    -Vector grid for buttons.
+                    <br>
+                    -list the last calculations.
+                    <br>
+                    -take out fractions and mod.
+                    <br>
+
+                    <a href="https://github.com/siddhantapoudel/Calculator-C-Sharp">Github Link</a>
+                </p>
+
+            </div>
+
+        </div>
+        <div class="col span_1_of_2">
+            <div style="text-align: center">
+                <img src="pictures/Other_img.PNG" height="80%" width="80%" style="text-align: center; padding-top: 15px; padding-bottom: 10px" alt="website image"/>
+                <br>
+                <span><a href="https://github.com/siddhantapoudel" >And others!</a></span>
+                <p class="about_des">
+                    -Check out my github for more and upcoming projects.
+                    <br>
+                    -Simple music Player C# <a href="https://github.com/siddhantapoudel/Very-Simple-music-player-C-Sharp">Visit</a>
+                    <br>
+                    -Restaurant management app via python <a href="https://github.com/siddhantapoudel/Python-projects">Visit</a>
+                    <br>
+                    -Calculator via python<a href="https://github.com/siddhantapoudel/Python-projects">visit</a>
+                    <br>
+                    <a href="https://github.com/siddhantapoudel">Github Link</a>
+
+                </p>
+
+            </div>
+        </div>
+    </div>
+
+    <hr>
+
+    <h2>Contact</h2>
+
+
 
 
 </div>
