--- a/index.html
+++ b/index.html
@@ -74,6 +74,8 @@
     <h2 align="center" >About Me</h2>
     <div style="text-align: center; padding-top: 1em;padding-bottom: 1em;">
         <img class="profile_pic" src="pictures/20190410_110601.jpg" alt="profile pic"/>
+        <p style="padding-top: 15px">-Siddhanta Poudel (Software Developer)</p>
+        <p><a href="https://github.com/siddhantapoudel">GitHub</a> || <a href="linkedin.com/in/siddhanta-poudel-634897148">Linked In</a> || <a href="https://www.facebook.com/siddhanta.poudel44">Facebook</a> </p>
     </div>
 
     <div class="section group">
@@ -215,8 +217,8 @@
                 <h2 id="go3">Contact Me</h2>
                 <p>Contact No: 9862760234</p>
                 <p>Radhe Radhe,Bhaktapur</p>
-                <p>Facebook: <a href="#">Visit</a></p>
-                <p>Linked In: <a href="#">Visit</a></p>
+                <p>Facebook: <a href="https://www.facebook.com/siddhanta.poudel44">Visit</a></p>
+                <p>Linked In: <a href="linkedin.com/in/siddhanta-poudel-634897148">Visit</a></p>
             </div>
             <div class="col-sm-3">
 
