fixed tablet mode

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                 <img src="pictures/todo_img.PNG" height="40%" width="40%" style="text-align: center; padding-top: 15px; padding-bottom: 10px" alt="website image"/>
                 <br>
                 <span><a href="https://github.com/siddhantapoudel/ToDoList-using-JSON" >Todo List C#</a></span>
-                <p class="about_des">
+                <p class="about_des" id="about_des1">
                     -Add and Delete Todo.
                     <br>
                     -Set the todo as done.
@@ -168,7 +168,7 @@
                 <img src="pictures/Calc_img.PNG" height="30%" width="30%" style="text-align: center; padding-top: 15px; padding-bottom: 10px" alt="website image"/>
                 <br>
                 <span><a href="https://github.com/siddhantapoudel/Calculator-C-Sharp" >Calculator C#</a></span>
-                <p class="about_des">
+                <p class="about_des" id="about_des2">
                     -Basic Calculations.
                     <br>
                     -Vector grid for buttons.
@@ -218,15 +218,17 @@
                 <p>Contact No: 9862760234</p>
                 <p>Radhe Radhe,Bhaktapur</p>
                 <p>Facebook: <a href="https://www.facebook.com/siddhanta.poudel44">Visit</a></p>
-                <p>Linked In: <a href="linkedin.com/in/siddhanta-poudel-634897148">Visit</a></p>
+                <p>Linked In: <a href="https://www.linkedin.com/in/siddhanta-poudel-634897148">Visit</a></p>
+                <p>Youtube: <a href="https://www.youtube.com/channel/UCoHhJrxO-enioxnF_AkU_2g">Visit</a></p>
             </div>
-            <div class="col-sm-3">
+            <div class="col-sm-2">
 
             </div>
-            <div class="col-sm-4 subscribe" id="footer2">
-                <h2>Connect With Me</h2>
-                <p>Send me a Email so that you</p>
-                <p>can get in touch with me</p>
+            <div class="col-sm-5" id="footer2">
+                <h2>Connect</h2>
+                <p>Send me a Email</p>
+                <p>so that you can get in</p>
+                <p>touch with me</p>
                 <p style="font-weight: bold">Email: </p>
                 <p>Siddhanta.poudel44@gmail.com</p>
             </div>
