--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
             <div style="text-align: center; height: 100%; width: 100%">
                 <img src="pictures/website_img.PNG" height="80%" width="80%" style="text-align: center; padding-top: 15px; padding-bottom: 10px" alt="website image"/>
                 <br>
-                <span><a href="https://muktinathjewels.000webhostapp.com" >Jewellery Website</a></span>
+                <span><a href="https://muktinathjewelleries.com" >Jewellery Website</a></span>
                 <p class="about_des">
                     -Responsive Mobile Friendly.
                     <br>
@@ -135,7 +135,7 @@
                     <br>
                     -Thumbnail system for faster loading
                     <br>
-                    <a href="https://muktinathjewels.000webhostapp.com">Visit Here!</a>
+                    <a href="http://muktinathjewelleries.com">Visit Here!</a>
                     Also
                     <a href="https://github.com/siddhantapoudel/Jewellery_website_Project">Github Link</a>
                 </p>
