--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     <div style="text-align: center; padding-top: 1em;padding-bottom: 1em;">
         <img class="profile_pic" src="pictures/20190410_110601.jpg" alt="profile pic"/>
         <p style="padding-top: 15px">-Siddhanta Poudel (Software Developer)</p>
-        <p><a href="https://github.com/siddhantapoudel">GitHub</a> || <a href="linkedin.com/in/siddhanta-poudel-634897148">Linked In</a> || <a href="https://www.facebook.com/siddhanta.poudel44">Facebook</a> </p>
+        <p><a href="https://github.com/siddhantapoudel">GitHub</a> || <a href="linkedin.com/in/siddhanta-poudel-634897148">Linked In</a> </p>
     </div>
 
     <div class="section group">
